# tessera-protocol

./: .gitignore  CHANGELOG.md  LICENSE  LICENSING.md  NOTICE  README.md  SECURITY.md  pyproject.toml  run_tests.py
docs/: TESSERA_protocol.md
examples/: demo_chat.py
src/tessera/: __init__.py  chacha20.py  exceptions.py  field.py  kdf.py  keyagreement.py  keypool.py  mac.py  ratchet.py  session.py
tests/: test_chacha20_rfc8439.py  test_forward_secrecy.py  test_keyagreement.py  test_mac.py  test_otp_mode.py  test_replay_order.py  test_session_roundtrip.py  test_tamper.py
